# pepper4dec

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml  map.pgm  package.xml  setup.cfg  setup.py
behaviorController/: CMakeLists.txt  package.xml
behaviorController/config/: behaviorControllerConfiguration.ini  behaviorControllerConfiguration.yaml
behaviorController/data/: environmentKnowledgeBase.yaml
behaviorController/include/behaviorController/: behaviorControllerInterface.h
behaviorController/include/utilities/: CMakeLists.txt  package.xml
behaviorController/msg/: FaceDetectionData.msg  OvertAttentionMode.msg
behaviorController/src/: behaviorControllerApplication.cpp  behaviorControllerImplementation.cpp  behaviorControllerUtilities.cpp
behaviorController/srv/: AnimateBehaviorSetActivation.srv  GestureExecutionPerformGesture.srv  OvertAttentionSetMode.srv  RobotNavigationSetGoal.srv  SpeechEventSetEnabled.srv  SpeechEventSetLanguage.srv  TextToSpeechSayText.srv
cssr_system/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cssr_system/animate_behavior/: README.md  package.xml  setup.py
cssr_system/animate_behavior/animate_behavior/: animate_behavior_application.py  animate_behavior_diagnosis.py  animate_behavior_implementation.py
cssr_system/animate_behavior/config/: animate_behavior_configuration.yaml
cssr_system/behaviorController/: CMakeLists.txt  README.md  package.xml  setup.py
cssr_system/behaviorController/behavior_controller/: behavior_controller_application.py
cssr_system/behaviorController/config/: behaviorControllerConfiguration.yaml
cssr_system/behaviorController/data/: XML_USE.md  asr_cm_tts_pipeline.xml  cultureKnowledgeBase.yaml  decEnvironmentKnowledgeBase.yaml  dec_Tour.xml  environmentKnowledgeBase.yaml  labEnvironmentKnowledgeBase.yaml  lab_tour.xml
cssr_system/behaviorController/msg/: OvertAttentionMode.msg
cssr_system/behaviorController/src/: behaviorControllerApplication.cpp  behaviorControllerImplementation.cpp  (+1 more)
cssr_system/behavior_controller/: package.xml  setup.cfg  setup.py
cssr_system/behavior_manager/: CMakeLists.txt  package.xml
cssr_system/conversation_manager/: README.md  package.xml  setup.py
cssr_system/cssr_interfaces/: CMakeLists.txt  package.xml
cssr_system/custom_launch/: package.xml  setup.py
cssr_system/face_detection/: README.md  requirements.txt  setup.py
cssr_system/gesture_execution/: README.md  package.xml  setup.py
cssr_system/head_test/: README.md  package.xml  setup.cfg  setup.py
cssr_system/language_model/: README.md  package.xml  setup.cfg  setup.py
cssr_system/object_detection/: README.md  package.xml  setup.py
cssr_system/overt_attention/: README.md  package.xml  setup.cfg  setup.py
cssr_system/pepper_attention/: package.xml  setup.cfg  setup.py
cssr_system/pepper_navigation/: CMakeLists.txt  package.xml  setup.py
cssr_system/person_detection/: package.xml  setup.cfg  setup.py
cssr_system/robot_localization/: setup.py
cssr_system/sound_detection/: README.md  package.xml  setup.cfg  setup.py
cssr_system/speech_event/: README.md  package.xml  setup.cfg  setup.py  speech_event_requirements.txt
cssr_system/text_to_speech/: package.xml  setup.py
cssr_system/tts/: package.xml  requirements.txt  setup.cfg  setup.py
dec_launch/: CMakeLists.txt  ament_flake8.ini  package.xml
dec_launch/launch/: asr_cm_pipeline.launch.py  dec_system.launch.py  lio_sam_l2.launch.py  my_realsense_with_staticframes.launch.py  reset.sh  rtabmap_realsense.launch.py
dec_launch/scripts/: depth_roi_service.py  lidar_depth_calibrator.py
dec_system/animate_behavior/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
dec_system/behaviorController/: CMakeLists.txt  README.md  package.xml
overt_attention/: CMakeLists.txt  README.md
pepper_interface_tests/: CMakeLists.txt  README.md  package.xml
pepper_interface_tests/config/: actuatorTestConfiguration.ini  actuatorTestInput.ini  actuatorTestInput.yaml  sensorTestConfiguration.yaml  sensorTestInput.ini  sensorTestInput.yaml
pepper_interface_tests/data/: pepperTopics.yaml  simulatorTopics.yaml
pepper_interface_tests/launch/: actuatorTestLaunchRobot.launch  actuator_test_robot_launch.py  interfaceTestLaunchSimulator.launch  sensorTestLaunchRobot.launch  sensor_test_robot_launch.py
pepper_interface_tests/src/: actuatorTestApplication.cpp  actuatorTestImplementation.cpp  sensorTestApplication.cpp  sensorTestImplementation.cpp
pepper_navigation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pepper_navigation/config/: README.md  mapper_params_online_async.yaml
pepper_navigation/launch/: pepper_navigation.launch.py  rtabmap_bag_test.launch.py  rtabmap_fastlio_bag_test.launch.py  slam_toolbox.launch.py
pepper_navigation/map/: keepout_zone.pgm  map_2.yaml  rtabmap_feb_26.yaml  rtabmap_march_28.pgm
pepper_navigation/pepper_navigation/: send_goal.py
pepper_navigation/rviz/: odometry_test.rviz
pepper_navigation/tools/: generate_keepout.py
pepper_slam/: CMakeLists.txt  README.md
pepper_slam/launch/: pepper_sensor_tf.launch.py  rtabmap_fastlio_bag_test.launch.py  rtabmap_fused_bag_test.launch.py  rtabmap_l2_bag_test.launch.py  slam_toolbox.launch.py
pepper_slam/scripts/: compute_lidar_camera_bridge.py
person_detection/: CMakeLists.txt  README.md  package.xml  requirements.txt
person_detection/config/: person_detection_configuration.yaml
person_detection/launch/: person_detection_launch_robot.launch.py
person_detection/src/: byte_tracker.cpp  person_detection_application.cpp  person_detection_implementation.cpp
person_detection/test/: test_bag_replay_launch.py
utilities/: CMakeLists.txt  README.md  package.xml
utilities/config/: cultureKnowledgeBaseConfiguration.ini  cultureKnowledgeBaseConfiguration.yaml  environmentKnowledgeBaseConfiguration.yaml
utilities/launch/: cultureKnowledgeBaseExample.launch
utilities/src/: cultureKnowledgeBaseImplementation.cpp  environmentKnowledgeBaseImplementation.cpp
(+468 files in other folders)
