<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cssr_system</name>
  <version>1.0.0</version>
  <description>CSSR4Africa Behavior Controller for ROS2</description>
  
  <maintainer email="ttefferi@andrew.cmu.edu">Tsegazeab Taye Tefferi</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- BehaviorTree dependency -->
  <depend>behaviortree_cpp</depend>
  
  <!-- Message/Service generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_cmake</build_depend>
  
  <!-- Additional dependencies for your custom messages/services -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <!-- YAML processing -->
  <depend>yaml-cpp-vendor</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Required for packages that define interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>