<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dec_launch</name>
  <version>0.0.0</version>
  <description>Custom launch files for Pepper4DEC system</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>overt_attention</exec_depend>
  <exec_depend>person_detection</exec_depend>
  <exec_depend>face_detection</exec_depend>
  <exec_depend>pepper_odom_anchor</exec_depend>
  <exec_depend>animate_behavior</exec_depend>
  <exec_depend>gesture_execution</exec_depend>
  <exec_depend>speech_event</exec_depend>
  <exec_depend>text_to_speech</exec_depend>
  <exec_depend>conversation_manager</exec_depend>
  <exec_depend>behavior_controller</exec_depend>
  <exec_depend>pepper_navigation</exec_depend>
  <exec_depend>dec_interfaces</exec_depend>

  <!-- Jetson-only RealSense depth ROI service / rtabmap launch -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- LiDAR colorizer / depth calibrator nodes -->
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>